Calculated total price of the inventory